Menambahkan file yang dikerjakan pada pertemuan 6

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
 desktop.ini
+/2. Latihan/Pertemuan6/JavaApplication2/nbproject/private/
+/2. Latihan/Pertemuan6/JavaApplication2/build/
+/2. Latihan/Pertemuan6/Negara/nbproject/private/
+/2. Latihan/Pertemuan6/Negara/build/
