Dikerjakan pada pertemuan 7

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@ desktop.ini
 /2. Latihan/Pertemuan6/JavaApplication2/build/
 /2. Latihan/Pertemuan6/Negara/nbproject/private/
 /2. Latihan/Pertemuan6/Negara/build/
+/2. Latihan/Pertemuan6/Exception/nbproject/private/
+/2. Latihan/Pertemuan7/Exception/build/
+/2. Latihan/Pertemuan7/Thread/nbproject/private/
+/2. Latihan/Pertemuan7/GUI/nbproject/private/
