Membuat project aritmatika (Pertemuan 8)

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@ desktop.ini
 /2. Latihan/Pertemuan7/Exception/build/
 /2. Latihan/Pertemuan7/Thread/nbproject/private/
 /2. Latihan/Pertemuan7/GUI/nbproject/private/
+/2. Latihan/Pertemuan8/Number Addition Application/nbproject/private/
+/2. Latihan/Pertemuan8/NumberAddition/nbproject/private/
+/2. Latihan/Pertemuan8/NumberAddition/build/
+/2. Latihan/Pertemuan8/NumberAddition/dist/
