Membuat aplikasi penghitung nilai mahasiswa (Pertemuan 9)

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,6 @@ desktop.ini
 /2. Latihan/Pertemuan8/NumberAddition/nbproject/private/
 /2. Latihan/Pertemuan8/NumberAddition/build/
 /2. Latihan/Pertemuan8/NumberAddition/dist/
+/2. Latihan/Pertemuan9/PenentuNilaiMahasiswa/nbproject/private/
+/2. Latihan/Pertemuan9/PenentuNilaiMahasiswa/dist/
+/2. Latihan/Pertemuan9/PenentuNilaiMahasiswa/build/
