--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,6 @@ desktop.ini
 /2. Latihan/Pertemuan9/PenentuNilaiMahasiswa/nbproject/private/
 /2. Latihan/Pertemuan9/PenentuNilaiMahasiswa/dist/
 /2. Latihan/Pertemuan9/PenentuNilaiMahasiswa/build/
+/2. Latihan/Pertemuan10/BiodataOrganisasi/nbproject/private/
+/2. Latihan/Pertemuan10/BiodataOrganisasi/build/
+/2. Latihan/Pertemuan10/BiodataOrganisasi/dist/
